content/en/v4.10.0/quick-start/_index.md
---
title: "Quick Start"
linkTitle: "Quick Start"
description: 
weight: 3
---

This chapter describes how to quickly install and use Huawei CSI to manage Persistent Volume Claims \(PVCs\).

## Huawei CSI Use Process{#section10356165115616}

**Figure  1**  CSI installation and use process<a name="fig111116220210"></a>  
![](/css-docs/figures/csi-installation-and-use-process.png "csi-installation-and-use-process")

## Compatibility and Features{#section17589135519713}

Before using this plug-in, learn about its compatibility with Huawei storage, container platforms, and host operating systems \(OSs\), as well as supported features. For details, see  [Compatibility and Features](/docs/compatibility-and-features).

## Installation Preparations{#section1698093774519}

Before installing Huawei CSI, you need to prepare the configurations of related environments such as container platforms and hosts. For details, see  [Installation Preparations](/docs/installation-and-deployment/csi/installation-preparations).

## Installation and Deployment{#section48621535144915}

Huawei CSI provides two installation modes: installation using Helm and manual installation, which are suitable for different container platforms such as Kubernetes and OpenShift. For details, see  [Installation and Deployment](/docs/installation-and-deployment).

## Creating a Storage Backend{#section18261514524}

Before using Huawei CSI, you need to create storage backend resources. For details, see  [Configuring the Storage Backend](/docs/basic-services/storage-backend-management/configuring-the-storage-backend).

## Using Huawei CSI{#section1855354751020}

Now, you can use Huawei CSI to manage PVCs. For details, see  [Configuring a StorageClass](/docs/basic-services/storageclass-management/configuring-a-storageclass)  and  [Configuring PVs](/docs/basic-services/persistent-volume-management/configuring-pvs).

